# C6_telemetry_bridge

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  c6_telemetry_bridge.c  idf_component.yml  secrets_example.h
